@@ -1,5 +1,9 @@
 This is the CHANGELOG for amavisd-milter.
 
+20060124:
+	Remove all files and directories in work directory because
+	amavisd-new sometimes don't do it (e.q. when antivirus fail).
+
 20060123:
 	Limit maximum concurrent connections to amavisd:
 
@@ -101,4 +105,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.18 2006/01/13 18:13:36 reho Exp $
+$Id: CHANGES,v 1.19 2006/01/23 15:15:48 reho Exp $
